--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,8 @@ header .logo{
     float: left;
     height: inherit;
     margin-left: 2rem;
-    border: 1px solid red;
 }
+
 header .logo-text{
     margin: 8px;
     font-family: 'candal', serif;
@@ -42,6 +42,10 @@ header ul li ul{
     top: 66px;
     right: 0px;
     width: 180px;
+    display: none;
+}
+header ul li:hover ul{
+    display: block;
 }
 header ul li ul li{
     width: 100%;
@@ -51,6 +55,9 @@ header ul li ul li a{
     background: white;
     color: #444;
 }
+header ul li ul li a.logout{
+    color: red;
+}
 header ul li ul li a:hover{
     background: #d5d6d6;
 }
@@ -59,6 +66,7 @@ header ul li a{
     padding: 21px;
     font-size: 1.1rem;
     text-decoration: none;
+    color: white;
 }
 header ul li a:hover{
     background: #006669;
@@ -67,4 +75,49 @@ header ul li a:hover{
 
 header .menu-toggle{
     display: none;
+}
+
+/* ========= responsvie for 750 screen ============= */
+
+@media only screen and (max-width: 750px){
+    header{
+        position: relative;
+    }
+    header ul{
+        width: 100%;
+        background: #0e94a0;
+        max-height: 0px;
+        overflow: hidden;
+    }
+    header ul li{
+        width: 100%;
+    }
+    header ul li ul{
+        position: static;
+        display: block;
+        width: 100%;
+    }
+    header ul li ul li a{
+        padding: 10px;
+        background: #0e94a0;
+        color: white;
+        padding-left: 50px;
+    }
+    header ul li ul li a.logout{
+        color: red;
+    }
+    header .menu-toggle{
+        display: block;
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        font-size: 1.9rem;
+    }
+    header .logo{
+        margin-left: .8em;
+    }
+    header .logo-text{
+        padding-top: 7px;
+        font-size: 1.5em;
+    }
 }
