--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ header .menu-toggle{
 }
 .post-slider .next{
     position: absolute;
-    top: 50px;
+    top: 50%;
     right: 30px;
     font-size: 2em;
     color: #006669;
@@ -101,7 +101,7 @@ header .menu-toggle{
 }
 .post-slider .prev{
     position: absolute;
-    top: 50px;
+    top: 50%;
     left: 30px;
     font-size: 2em;
     color: #006669;
@@ -112,14 +112,19 @@ header .menu-toggle{
     height: 350px;
     margin: 0px auto;
     overflow: hidden;
+    padding: 10px 0px 10px 0px;
     border: 1px dashed red;
 }
 .post-slider .post-wrapper .post{
     width: 300px;
-    height: 350px;
+    height: 330px;
     margin: 0px 10px;
     display: inline-block;
-    background: #0ce9f1;
+    background: white;
+}
+.post-slider .post-wrapper .post .slider-image{
+    width: 100%;
+    height: 200px;
 }
 
 /* ========= responsvie for 750 screen ============= */
