--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ body{
 h1,h2,h3,h4,h5,h6{
     font-family: 'candal', serif;
     color: #444;
+    margin: 5px;
+}
+a{
+    text-decoration: none;
+    color: inherit;
 }
 header{
     background: #008489;
@@ -122,12 +127,24 @@ header .menu-toggle{
     display: inline-block;
     background: white;
     border-radius: 5px;
+    box-shadow: 1rem 1rem 1rem -1rem #a0a0a033;
 }
+.post-slider .post-wrapper .post .post-info{
+    height: 130px;
+    border: 1px solid green;
+}
+
 .post-slider .post-wrapper .post .slider-image{
     width: 100%;
     height: 200px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+}
+
+.far{
+    text-decoration: none;
+    font-size: 12px;
+    margin: 5px;
 }
 
 /* ========= responsvie for 750 screen ============= */
