--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,13 @@ header ul li a:hover{
 header .menu-toggle{
     display: none;
 }
+.post-wrapper a:hover{
+    color: #006669;
+}
 /* ============  POST SLIDER ============ */
 
 .post-slider{
     position: relative;
-    border: 1px solid red;
 
 }
 .post-slider .slider-title{
@@ -118,7 +120,6 @@ header .menu-toggle{
     margin: 0px auto;
     overflow: hidden;
     padding: 10px 0px 10px 0px;
-    border: 1px dashed red;
 }
 .post-slider .post-wrapper .post{
     width: 300px;
@@ -131,7 +132,7 @@ header .menu-toggle{
 }
 .post-slider .post-wrapper .post .post-info{
     height: 130px;
-    border: 1px solid green;
+    padding: 0px 5px;
 }
 
 .post-slider .post-wrapper .post .slider-image{
