--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,22 @@ a{
     text-decoration: none;
     color: inherit;
 }
+.clearfix::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+.btn{
+    padding: .5rem 1rem;
+    background: #006669;
+    color: white;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+}
+.btn:hover{
+    color: white !important;
+    background: #005255;
+}
 header{
     background: #008489;
     height: 66px;
@@ -52,6 +68,7 @@ header ul li ul{
     right: 0px;
     width: 180px;
     display: none;
+    z-index: 88888;
 }
 header ul li:hover ul{
     display: block;
@@ -146,6 +163,59 @@ header .menu-toggle{
     text-decoration: none;
     font-size: 12px;
     margin: 5px;
+}
+
+/* =============Content Post recent */
+.content{
+    width: 90%;
+    margin: 30px auto 30px;
+
+}
+.content .main-content{
+    width: 70%;
+    float: left;
+}
+.content .main-content .post{
+    width: 95%;
+    height: 270px;
+    margin: 20px auto;
+    border-radius: 5px;
+    background: white;
+    position: relative;
+}
+.content .main-content .post .read-more{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    border: 1px solid #006669;
+    background: transparent;
+    border-radius: 0px;
+    color: #006669 !important;
+}
+.content .main-content .post .read-more:hover{
+    background: #006669;
+    color: white !important;
+    transition: .25s;
+}
+.content .main-content .post .post-image{
+    width: 40%;
+    height: 100%;
+    float: left; 
+}
+.content .main-content .post .post-preview{
+    width: 60%;
+    padding: 10px;
+    float: right;
+}
+
+.content .main-content .recent-post-title{
+    margin: 20px;
+}
+.content .sidebar{
+    width: 30%;
+    float: left;
+    border: 1px solid green;
+    height: 300px;
 }
 
 /* ========= responsvie for 750 screen ============= */
