--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 *{
     box-sizing: border-box;
 }
-body{
+html, body{
+    height: 100%;
     padding: 0px;
     margin: 0px;
     background: #f6f6f6;
@@ -31,6 +32,18 @@ a{
 .btn:hover{
     color: white !important;
     background: #005255;
+}
+.text-input{
+    padding: .7rem 1rem;
+    display: block;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #e0e0e0;
+    outline: none;
+    color: #444;
+    line-height: 1.5rem;
+    font-size: 1.2em;
+    font-family: 'Lora', serif;
 }
 header{
     background: #008489;
@@ -101,6 +114,10 @@ header ul li a:hover{
 
 header .menu-toggle{
     display: none;
+}
+
+.page-wrapper{
+    min-width: 100%;
 }
 .post-wrapper a:hover{
     color: #006669;
@@ -214,8 +231,65 @@ header .menu-toggle{
 .content .sidebar{
     width: 30%;
     float: left;
-    border: 1px solid green;
     height: 300px;
+}
+.content .sidebar .section.search{
+    margin-top: 80px;
+}
+.content .sidebar .section{
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+.content .sidebar .section .section-title{
+    margin: 10px 0px 10px 0px;
+}
+.content .sidebar .section.topics ul{
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    border-top: 1px solid #e0e0e0;
+}
+.content .sidebar .section.topics ul li a{
+    display: block;
+    padding: 15px 0px 15px 0px;
+    border-bottom: 1px solid #e0e0e0;
+    transition: all 0.3s;
+}
+.content .sidebar .section.topics ul li a:hover{
+    color: #005255;
+    padding-left: 10px;
+    transition: all 0.3s;
+}
+
+/* ========footer========= */
+.footer{
+    background: #303036;
+    color: #d3d3d3;
+    height: 400px;
+    position: relative;
+}
+.footer .footer-content{
+    border: 1px solid red;
+    height: 350px;
+    display: flex;
+}
+.footer .footer-content .footer-section{
+    flex: 1;
+    padding: 25px;
+    border: 1px solid white;
+}
+.footer .footer-bottom{
+    background: #343a40;
+    color: #686868;
+    height: 50px;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    padding-top: 20px;
 }
 
 /* ========= responsvie for 750 screen ============= */
