--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ a{
     color: white !important;
     background: #005255;
 }
+.btn-big{
+    padding: .7rem 1.3rem;
+    line-height: 1.3rem;
+}
 .text-input{
     padding: .7rem 1rem;
     display: block;
@@ -271,14 +275,66 @@ header .menu-toggle{
     position: relative;
 }
 .footer .footer-content{
-    border: 1px solid red;
     height: 350px;
     display: flex;
 }
 .footer .footer-content .footer-section{
     flex: 1;
     padding: 25px;
+}
+.footer .footer-content h1,
+.footer .footer-content h2{
+    color: white;
+}
+.footer .footer-content .about h1 span{
+    color: #05f7ff;
+}
+.footer .footer-content .about .contact span{
+    display: block;
+    font-size: 1.1rem;
+    margin-bottom: 8px;
+}
+.footer .footer-content .about .socials a{
+    border: 1px solid gray;
+    width: 45px;
+    height: 41px;
+    padding-top: 5px;
+    margin-right: 5px;
+    text-align: center;
+    display: inline-block;
+    font-size: 1.3rem;
+    border-radius: 5px;
+    transition: all .3s;
+}
+.footer .footer-content .about .socials a:hover{
     border: 1px solid white;
+    color: white;
+    transition: all .3s;
+}
+.footer .footer-content .links ul a{
+    display: block;
+    margin-bottom: 10px;
+    font-size: 1.2rem;
+    transition: all .3s;
+}
+.footer .footer-content .links ul a:hover{
+    color: white;
+    margin-left: 15px;
+    transition: all .3s;
+}
+.footer .footer-content .contact-form .contact-input{
+    background: #272727;
+    color: #bebdbd;
+    margin-bottom: 10px;
+    line-height: 1.5rem;
+    padding: .9rem 1.4rem;
+    border: none;
+}
+.footer .footer-content .contact-form .contact-input:focus{
+    background: #1a1a1a;
+}
+.footer .footer-content .contact-form .contact-btn{
+    float: right;
 }
 .footer .footer-bottom{
     background: #343a40;
