--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ a{
     color: white;
     border: 1px solid transparent;
     border-radius: .25rem;
+    font-size: 1.08em;
+    font-family: 'lora', serif;
 }
 .btn:hover{
     color: white !important;
@@ -289,6 +291,42 @@ header .menu-toggle{
     color: #005255;
     padding-left: 10px;
     transition: all 0.3s;
+}
+.auth-content{
+    width: 30%;
+    margin: 50px auto;
+    padding:  20px;
+    background: white;
+    border-radius: 5px;
+}
+.auth-content .form-title{
+    text-align: center;
+}
+.auth-content form div{
+    margin-bottom: 10px;
+}
+.auth-content form p{
+    text-align: center;
+}
+.auth-content form p a{
+    text-decoration: underline;
+}
+.msg{
+    width: 100%;
+    margin: 5px auto;
+    padding: 8px;
+    border-radius: 5px;
+    list-style: none;
+}
+.success{
+    color: #3a6e3a;
+    border: 1px solid #3a6e3a;
+    background: #bcf5bc;
+}
+.error{
+    color: #884b4b;
+    border: 1px solid #884b4b;
+    background: #f5bcbc;
 }
 
 /* ========footer========= */
