--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ header .menu-toggle{
 .content .sidebar{
     width: 30%;
     float: left;
-    height: 300px;
+    
 }
 .content .sidebar.single{
     padding: 0px 10px;
@@ -411,6 +411,42 @@ header .menu-toggle{
     left: 0px;
     padding-top: 20px;
 }
+/* ======================== */
+@media only screen and (max-width: 934px){
+  .content{
+    width: 100%;
+  }
+  .auth-content{
+    width: 50%;
+  }
+  .content .main-content{
+    width: 100%;
+    padding: 10px;
+  }
+  .content .main-content .post{
+    width: 100%;
+  }
+  .content .sidebar{
+    width: 100%;
+    padding: 10px;
+  }
+  .content .sidebar .section.search{
+    margin-top: 30px;
+  }
+  .footer{
+    height: auto;
+  }
+  .footer .footer-content{
+    height: auto;
+    flex-direction: column;
+  }
+  .footer .footer-content .contact-form{
+    padding-bottom: 90px;
+  }
+  .footer .footer-content .contact-form .contact-btn{
+    width: 100%;
+  }
+}
 
 /* ========= responsvie for 750 screen ============= */
 
@@ -418,6 +454,12 @@ header .menu-toggle{
     header{
         position: relative;
     }
+    .main-content-wrapper{
+        padding: 10px;
+    }
+    .auth-content{
+        width: 60%;
+      }
     header ul{
         width: 100%;
         background: #0e94a0;
@@ -462,3 +504,33 @@ header .menu-toggle{
         font-size: 1.5em;
     }
 }
+@media only screen and (max-width: 600px){
+    .content .main-content .post{
+        height: auto;
+    }
+    .auth-content{
+        width: 90%;
+      }
+    .content .main-content.single{
+        padding: 10px 20px;
+    }
+    .content .main-content .post .post-image{
+        width: 100%;
+    }
+    .content .main-content .post .post-preview{
+        width: 100%;
+    }
+    .content .main-content .post .read-more{
+        position: static;
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+    .post-slider .next{
+        right: 10px;
+    }
+    .post-slider .prev{
+        left: 10px;
+    }
+
+} 
